# scala-machine-learning-deployment

./: .env.production  .gitignore  .scalafmt.conf  Dockerfile  README.md  build.sbt  build_docker.sh  cheatsheet.md  client.Dockerfile  config_1.pbtxt  config_16.pbtxt  data.tar.xz  docker-compose-cpu.yaml  docker-compose.yaml  downloadprotos.sh  index.html  labels.json  main.js  package.json  pyproject.toml  server.Dockerfile  vite.config.js
core/shared/src/main/scala/: ImageClassification.scala  OAuth.scala
core/src/main/scala/: ImageClassification.scala
docker/: client.Dockerfile  client.conf  server.Dockerfile  triton.Dockerfile  triton_cpu.Dockerfile
gatling/src/it/resources/: images.csv
gatling/src/it/scala/: BasicSimulation.scala  MultiImageSimulation.scala  SingleImageSimulation.scala
gatling/src/main/scala/: Main.scala
project/: plugins.sbt
python/: preprocess_models.py
scripts/: build_docker.sh  preprocess_models.sh
server/src/main/resources/: logback.xml  oAuthConfig.json  serverConfig.json
server/src/main/scala/: Main.scala  NotMain.scala  Server.scala
server/src/main/scala/alg/: AuthAlg.scala  GithubAlg.scala  ImageClassificationInferenceAlg.scala  ImageProcessingAlg.scala
server/src/main/scala/config/: Config.scala  OAuthConfig.scala  ServerConfig.scala  TritonConfig.scala
server/src/main/scala/domain/: ImageClassification.scala  OAuth.scala
src/main/python/: preprocess_model.py
src/main/scala/: Main.scala  OpenCVUtils.scala
triton/: config_16.pbtxt  config_16_cpu.pbtxt  config_1_cpu.pbtxt
(+11 files in other folders)
